cha-pre-live-flux2/cha-eks-5a/namespaces/pdcast-systest/network-policy-defaults.yaml
---
######################################### 
## deny all ingress and egress traffic ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: pdcast-systest
spec:
  podSelector: {}
  ingress: []
  egress: []

---

#########
## DNS ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-dns
  namespace: pdcast-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP

---

################
## monitoring ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-monitoring
  namespace: pdcast-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: monitoring
